# WireViz

./: .gitignore  pyproject.toml  setup.py
.\/: ex01.html  tutorial08.html
.github/: copilot-instructions.md
docs/: CONTRIBUTING.md  README.md  supplier_api.md  syntax.md
examples/: ex15.yml
examples/.\/: demo01.html  test_supplier.bom.tsv  test_supplier.html  test_supplier_save.html
src/wireviz/: DataClasses.py  Harness.py  __init__.py  bom.py  build_examples.py  colors.py  data.py  graphviz_html.py  harness.py  helper.py  html.py  main.py  suppliers.py  svgembed.py  wireviz.py  wv_bom.py  wv_cli.py  wv_gv_html.py  wv_helper.py  wv_html.py
