[project]
name = "wireviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "pillow>=11.1.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.2",
]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "FA100",
    "FA102",
    "TRY003",
    "D400",
    "D415",
    "RUF012",
    "B019",
    "TD003",
    "G004",
    "EM101",
    "EM102",
]
